--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -642,6 +642,9 @@
     <None Include="Resources\text_align_justified.png" />
     <None Include="Resources\document_view1.png" />
     <None Include="Resources\document_view2.png" />
+    <None Include="Resources\redo.png" />
+    <None Include="Resources\navigate_up.png" />
+    <None Include="Resources\navigate_down.png" />
     <Content Include="Resources\wp_habitat.gif" />
     <Content Include="Resources\wp_Inside_in_shadows.gif" />
     <Content Include="Resources\wp_Mooferd.gif" />
