--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -645,6 +645,9 @@
     <None Include="Resources\navigate_up.png" />
     <None Include="Resources\navigate_down.png" />
     <None Include="Resources\package.png" />
+    <None Include="Resources\PDF..png" />
+    <None Include="Resources\PDF.1.png" />
+    <None Include="Resources\pdf.png" />
     <Content Include="Resources\wp_habitat.gif" />
     <Content Include="Resources\wp_Inside_in_shadows.gif" />
     <Content Include="Resources\wp_Mooferd.gif" />
