--- a/OutworldzFiles/PHP5/php.ini
+++ b/OutworldzFiles/PHP5/php.ini
@@ -733,7 +733,7 @@ user_dir =
 ; http://php.net/extension-dir
 ; extension_dir = "./"
 ; On windows:
-extension_dir = "ext"
+extension_dir = "/Opensim/Outworldz Dreamgrid/OutworldzFiles/PHP5/ext"
 
 ; Directory where the temporary files should be placed.
 ; Defaults to the system default (see sys_get_temp_dir)
@@ -917,7 +917,7 @@ extension=php_pdo_mysql.dll
 
 ;extension=php_soap.dll
 ;extension=php_sockets.dll
-;extension=php_sqlite3.dll
+extension=php_sqlite3.dll
 ;extension=php_sybase_ct.dll
 ;extension=php_tidy.dll
 extension=php_xmlrpc.dll
