--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -352,10 +352,11 @@ RewriteRule "(^|/)\.(?!well-known\/)" - [F]
 
 
 <VirtualHost *:80>
-Timeout 20000
+Timeout 5000
 DocumentRoot "/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
 # changed by Dreamgrid
 ServerName 127.0.0.1
+# in case you want a diffferent URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
 </VirtualHost>
 
@@ -384,7 +385,7 @@ ErrorLog "|bin/rotatelogs.exe -l /Opensim/Outworldz Dreamgrid/Outworldzfiles/Apa
 # Possible values include: debug, info, notice, warn, error, crit,
 # alert, emerg.
 #
-LogLevel warn
+LogLevel debug
 
 <IfModule log_config_module>
     #
@@ -415,13 +416,13 @@ LogLevel warn
 
 # changed by Dreamgrid
 #CustomLog "|bin/rotatelogs.exe -l c:/log/apache/access-%Y-%m-%d.log 86400" common env=!dontlog
-CustomLog "|bin/rotatelogs.exe -l /Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400" common env=!dontlog
+#CustomLog "|bin/rotatelogs.exe -l C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400" common env=!dontlog
 
     #
     # If you prefer a logfile with access, agent, and referer information
     # (Combined Logfile Format) you can use the following directive.
     #
-    #CustomLog "logs/access.log" combined
+    CustomLog "logs/access.log" combined
 	
 </IfModule>
 
