Objects and Regions

--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,24 +25,24 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=DreamGrid
-http_listener_port=7002
+GridName=Alienware
+http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://Alien.Outworldz.net
+BaseURL=http://127.0.0.1
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.155
+PrivURL=http://127.0.0.1
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=7002
+PublicPort=8002
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
-PrivatePort=7003
+PrivatePort=8003
 
 ; * The startup section lists all the connectors to start up in this server
 ; * instance. This may be only one, or it may be the entire server suite.
@@ -235,7 +235,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3309;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -499,7 +499,8 @@ AllowRemoteSetLoginLevel="false"
 MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 
 ; Url to search service
-SearchURL=http://www.hyperica.com/Search/query.php
+;SearchURL=http://www.hyperica.com/Search/query.php
+SearchURL=http://127.0.0.1/Search/query.php
 
 ; For V3 destination guide
 DestinationGuide="http://www.hyperica.com/destination-guide/"
