--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,7 +25,7 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=Alienware
+GridName=DreamGrid
 http_listener_port=8002
 
 ;; Set by Dreamgrid
@@ -500,7 +500,7 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 
 ; Url to search service
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=http://127.0.0.1/Search/query.php
+SearchURL=http://127.0.0.1/Search/
 
 ; For V3 destination guide
 DestinationGuide="http://www.hyperica.com/destination-guide/"
