--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -500,7 +500,7 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 
 ; Url to search service
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=http://127.0.0.1/Search/
+SearchURL=${Const|PrivURL}/Search/query.php
 
 ; For V3 destination guide
 DestinationGuide="http://www.hyperica.com/destination-guide/"
