--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -208,6 +208,10 @@ LoadModule version_module modules/mod_version.so
 #LoadModule watchdog_module modules/mod_watchdog.so
 #LoadModule xml2enc_module modules/mod_xml2enc.so
 
+# SSL/TLS Certificates
+# uncomment for HTTPS(SSL/TLS). You need to put certs in extras\Certs
+#LoadModule ssl_module modules/mod_ssl.so
+
 #PHP
 LoadModule php5_module "/Opensim/Outworldz Dreamgrid/Outworldzfiles/PHP5/php5apache2_4.dll"
 <FilesMatch \.php$>
@@ -218,8 +222,6 @@ LoadModule php5_module "/Opensim/Outworldz Dreamgrid/Outworldzfiles/PHP5/php5apa
 # changed by Dreamgrid
 PHPIniDir "/Opensim/Outworldz Dreamgrid/Outworldzfiles/PHP5"
 
-# uncomment for HTTPS(SSL/TLS). You need to put certs in extras\Certs
-#LoadModule ssl_module modules/mod_ssl.so
 
 
 <IfModule unixd_module>
@@ -272,10 +274,10 @@ ThreadsPerChild 200
 MaxRequestsPerChild 1000000
 
 KeepAlive On
+# 5 seconds
 KeepAliveTimeout 5000
 MaxKeepAliveRequests 5000
-
-TimeOut 5000
+TimeOut 5000  
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -285,7 +287,6 @@ TimeOut 5000
 <Directory />
     AllowOverride none
     Require all denied
-    # Deny from 216.82.56.81/255.255.255.0
 </Directory>
 
 #
@@ -316,7 +317,7 @@ DocumentRoot "/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
 # The Options directive is both complicated and important.  Please see
 # http://httpd.apache.org/docs/2.4/mod/core.html#options
 # for more information.
-#Includes
+
 Options Includes ExecCGI
 
 #
@@ -331,13 +332,13 @@ AllowOverride None
 #
 Require all granted
 
+# EXcample blacklist an IP Address
 #Deny from  113.91.67.84/255.255.255.0    # chinese bot as one example
 
 </Directory>
 </Macro>
 
 Use VDir "/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
-
 
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
@@ -385,7 +386,7 @@ ErrorLog "|bin/rotatelogs.exe -l /Opensim/Outworldz Dreamgrid/Outworldzfiles/Apa
 # Possible values include: debug, info, notice, warn, error, crit,
 # alert, emerg.
 #
-LogLevel debug
+LogLevel warn
 
 <IfModule log_config_module>
     #
@@ -394,16 +395,15 @@ LogLevel debug
     #
     #LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
     #LogFormat "%h %l %u %t \"%r\" %>s %b" common
-    LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-    LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" common
+    #LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+    #LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" common
 
+    LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+    LogFormat "%h %l %u %t \"%r\" %>s %b" common
 
-    <IfModule logio_module>
-      # You need to enable mod_logio.c to use %I and %O
-      #LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
-      LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
-    </IfModule>
-
+    
+ #ErrorLog "|bin/rotatelogs.exe -l C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400"
+ ErrorLog "C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error.log" 
     #
     # The location and format of the access logfile (Common Logfile Format).
     # If you do not define any access logfiles within a <VirtualHost>
@@ -411,18 +411,19 @@ LogLevel debug
     # define per-<VirtualHost> access logfiles, transactions will be
     # logged therein and *not* in this file.
     #
-    #CustomLog "logs/access.log" common
+CustomLog "|bin/rotatelogs.exe -l /Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400" common env=!dontlog
     #CustomLog "|bin/rotatelogs -l /inetpub/log/access.log" common
 
 # changed by Dreamgrid
 #CustomLog "|bin/rotatelogs.exe -l c:/log/apache/access-%Y-%m-%d.log 86400" common env=!dontlog
-#CustomLog "|bin/rotatelogs.exe -l C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400" common env=!dontlog
+#CustomLog "|bin/rotatelogs.exe -l C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log 86400" common
+#env=!dontlog
 
     #
     # If you prefer a logfile with access, agent, and referer information
     # (Combined Logfile Format) you can use the following directive.
     #
-	CustomLog "logs/access.log" combined
+	#CustomLog "logs/access.log" combined
 	
 </IfModule>
 
@@ -528,9 +529,10 @@ MIMEMagicFile conf/magic
 # Customizable error responses come in three flavors:
 # 1) plain text 2) local redirects 3) external redirects
 #
+ErrorDocument 500 "The server made a boo boo."
+
 # Some examples:
-#ErrorDocument 500 "The server made a boo boo."
-ErrorDocument 404 /error404.htm
+#ErrorDocument 404 error404.htm
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
 #ErrorDocument 402 http://www.example.com/subscription_info.html
 #
@@ -565,10 +567,10 @@ ErrorDocument 404 /error404.htm
 #Include conf/extra/httpd-mpm.conf
 
 # Multi-language error messages
-#Include conf/extra/httpd-multilang-errordoc.conf
+Include conf/extra/httpd-multilang-errordoc.conf
 
 # Fancy directory listings
-#Include conf/extra/httpd-autoindex.conf
+Include conf/extra/httpd-autoindex.conf
 
 # Language settings
 #Include conf/extra/httpd-languages.conf
@@ -611,36 +613,34 @@ SSLRandomSeed connect builtin
 AcceptFilter http none
 AcceptFilter https none
 
-#<IfModule headers_module>
-#    <IfVersion >= 2.4.7 >
-#        Header always setifempty X-Frame-Options SAMEORIGIN
-#    </IfVersion>
-#    <IfVersion < 2.4.7 >
-#        Header always merge X-Frame-Options SAMEORIGIN
-#    </IfVersion>
-#    RequestHeader unset Proxy
-#</IfModule>
+<IfModule headers_module>
+    <IfVersion >= 2.4.7 >
+        Header always setifempty X-Frame-Options SAMEORIGIN
+    </IfVersion>
+    <IfVersion < 2.4.7 >
+        Header always merge X-Frame-Options SAMEORIGIN
+    </IfVersion>
+    RequestHeader unset Proxy
+</IfModule>
 
 # The following lines prevent .user.ini PHP settings files from being viewed by Web clients.
-#<Files ".user.ini">
-#
-#<IfVersion < 2.3 >
-#    Order allow,deny
-#    Deny from all
-#</IfVersion>
-#<IfVersion >= 2.3>
-#    Require all denied
-#</IfVersion>
-#
-#</Files>
+<Files ".user.ini">
+
+<IfVersion < 2.3 >
+    Order allow,deny
+    Deny from all
+</IfVersion>
+<IfVersion >= 2.3>
+    Require all denied
+</IfVersion>
+
+</Files>
 
 
 <IfModule expires_module>
-
-# enable expirations
-ExpiresActive On
-ExpiresDefault "access plus 30 days"
-
+    # enable expirations
+    ExpiresActive On
+    ExpiresDefault "access plus 1 hour"
 </IfModule>
 
 
