--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -198,6 +198,12 @@
     <Compile Include="FormDisplacement1X1.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormIARSave.Designer.vb">
+      <DependentUpon>FormIARSave.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormIARSave.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormRegionPopup.Designer.vb">
       <DependentUpon>FormRegionPopup.vb</DependentUpon>
     </Compile>
@@ -389,6 +395,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDisplacement1X1.resx">
       <DependentUpon>FormDisplacement1X1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormIARSave.resx">
+      <DependentUpon>FormIARSave.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRegionPopup.resx">
       <DependentUpon>FormRegionPopup.vb</DependentUpon>
