--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -338,6 +338,8 @@ Require all granted
 </Directory>
 </Macro>
 
+# must be flush aligned left
+# changed by Dreamgrid
 Use VDir "/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
 
 #
@@ -354,10 +356,16 @@ RewriteRule "(^|/)\.(?!well-known\/)" - [F]
 
 <VirtualHost *:80>
 Timeout 5000
+
+# must be flush aligned left
+# changed by Dreamgrid
 DocumentRoot "/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
+
+# must be flush aligned left
 # changed by Dreamgrid
 ServerName 127.0.0.1
-# in case you want a diffferent URL for your servers Web site yet still have Apache on.
+
+# in case you want a different URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
 </VirtualHost>
 
@@ -377,9 +385,6 @@ ServerName 127.0.0.1
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-# changed by Dreamgrid
-#ErrorLog "|bin/rotatelogs.exe -l  c:/log/apache/error-%Y-%m-%d.log 86400"
-ErrorLog "|bin/rotatelogs.exe -l /Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400"
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -393,17 +398,13 @@ LogLevel warn
     # The following directives define some format nicknames for use with
     # a CustomLog directive (see below).
     #
-    #LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-    #LogFormat "%h %l %u %t \"%r\" %>s %b" common
-    #LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-    #LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" common
+    LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+    LogFormat "%h %t %D \"%r\" \"%f%q\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" common
 
-    LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-    LogFormat "%h %l %u %t \"%r\" %>s %b" common
-
-    
- #ErrorLog "|bin/rotatelogs.exe -l C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400"
- ErrorLog "C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error.log" 
+# changed by Dreamgrid
+# must be flush aligned left
+ErrorLog "|bin/rotatelogs.exe  -l \"/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log\" 86400"
+ 
     #
     # The location and format of the access logfile (Common Logfile Format).
     # If you do not define any access logfiles within a <VirtualHost>
@@ -411,8 +412,10 @@ LogLevel warn
     # define per-<VirtualHost> access logfiles, transactions will be
     # logged therein and *not* in this file.
     #
-CustomLog "|bin/rotatelogs.exe -l /Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/error-%Y-%m-%d.log 86400" common env=!dontlog
-    #CustomLog "|bin/rotatelogs -l /inetpub/log/access.log" common
+# must be flush aligned left
+# changed by Dreamgrid
+
+CustomLog "|bin/rotatelogs.exe -l \"/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log\" 86400" common env=!dontlog"
 
 # changed by Dreamgrid
 #CustomLog "|bin/rotatelogs.exe -l c:/log/apache/access-%Y-%m-%d.log 86400" common env=!dontlog
