--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -1,4 +1,4 @@
-; * Run
+; * 
 ; * $ Robust.exe -inifile Robust.HG.ini
 ; *
 ; * Configurations for enabling HG1.5
@@ -214,6 +214,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; - "Imprudence 1.3" has access
 ;; - "Imprudence 1.3.1" has no access
 ; AllowedClients = ""
+
 ;# {DeniedClients} {} {Bar (|) separated list of denied clients} {}
 ;; Bar (|) separated list of viewers which may not gain access to the regions.
 ;; One can use a Substring of the viewer name to disable only certain
@@ -550,6 +551,22 @@ DSTZone="America/Los_Angeles;Pacific Standard Time"
 ;DOSForgiveClientAfterMS = 120000
 ;;
 ;; To turn off basic dos protection, set the DOSMaxRequestsInTimeFrame to 0.
+;
+
+
+; DeniedMacs
+; Must be set in LoginService and GatekeeperService
+;Fetch your mac string from the login or gatekeeper service(should both be the same anyways), and add inside the GateKeeper and LoginService section. Delimiter is a space for more than one mac
+; http://opensimulator.org/mantis/view.php?id=8291
+;DeniedMacs = "YOURLONGMACSTRING ANOTHERMAC"
+;
+;Keep spaces between each mac, do not use vertical bars e.g. | to separate the mac strings.
+;
+;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
+;
+DeniedMacs = ""
+
+
 [MapImageService]
 LocalServiceModule="OpenSim.Services.MapImageService.dll:MapImageService"
 
@@ -610,6 +627,8 @@ help="https://www.outworldz.com/Outworldz_installer/Manual_TroubleShooting.htm"
 ; uas = ${Const|BaseURL}:${Const|PublicPort}/
 ; gloebit
 [GatekeeperService]
+
+
 LocalServiceModule="OpenSim.Services.HypergridService.dll:GatekeeperService"
 
 ;; for the service
@@ -640,6 +659,19 @@ AllowTeleportsToAnyRegion=true
 ;; If ForeignAgentsAllowed is false, make exceptions using DisallowExcept
 ;; Leave blank or commented for no exceptions.
 ; DisallowExcept = "http://myfriendgrid.com:8002, http://myboss.com:8002"
+
+; DeniedMacs
+; Must be set in LoginService and GatekeeperService
+;Fetch your mac string from the login or gatekeeper service(should both be the same anyways), and add inside the GateKeeper and LoginService section. Delimiter is a space for more than one mac
+; http://opensimulator.org/mantis/view.php?id=8291
+;DeniedMacs = "YOURLONGMACSTRING ANOTHERMAC"
+;
+;Keep spaces between each mac, do not use vertical bars e.g. | to separate the mac strings.
+;
+;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
+;
+DeniedMacs = ""
+
 [UserAgentService]
 LocalServiceModule="OpenSim.Services.HypergridService.dll:UserAgentService"
 
