--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -1,4 +1,4 @@
-; * 
+; *
 ; * $ Robust.exe -inifile Robust.HG.ini
 ; *
 ; * Configurations for enabling HG1.5
@@ -25,20 +25,20 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=DreamGrid
-http_listener_port=8002
+GridName=www.Outworldz.com
+http_listener_port=9000
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://127.0.0.1
+BaseURL=http://www.Outworldz.com
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://127.0.0.1
+PrivURL=http://192.168.2.140
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=8002
+PublicPort=9000
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
@@ -214,7 +214,6 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; - "Imprudence 1.3" has access
 ;; - "Imprudence 1.3.1" has no access
 ; AllowedClients = ""
-
 ;# {DeniedClients} {} {Bar (|) separated list of denied clients} {}
 ;; Bar (|) separated list of viewers which may not gain access to the regions.
 ;; One can use a Substring of the viewer name to disable only certain
@@ -236,7 +235,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=Robustness;Old Guids=true;Allow Zero Datetime=true;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -552,8 +551,6 @@ DSTZone="America/Los_Angeles;Pacific Standard Time"
 ;;
 ;; To turn off basic dos protection, set the DOSMaxRequestsInTimeFrame to 0.
 ;
-
-
 ; DeniedMacs
 ; Must be set in LoginService and GatekeeperService
 ;Fetch your mac string from the login or gatekeeper service(should both be the same anyways), and add inside the GateKeeper and LoginService section. Delimiter is a space for more than one mac
@@ -564,8 +561,7 @@ DSTZone="America/Los_Angeles;Pacific Standard Time"
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs = ""
-
+DeniedMacs=""
 
 [MapImageService]
 LocalServiceModule="OpenSim.Services.MapImageService.dll:MapImageService"
@@ -601,7 +597,7 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
-welcome=http://www.outworldz.com/Outworldz_installer/Welcome.htm
+welcome=https://www.outworldz.com
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
@@ -627,8 +623,6 @@ help="https://www.outworldz.com/Outworldz_installer/Manual_TroubleShooting.htm"
 ; uas = ${Const|BaseURL}:${Const|PublicPort}/
 ; gloebit
 [GatekeeperService]
-
-
 LocalServiceModule="OpenSim.Services.HypergridService.dll:GatekeeperService"
 
 ;; for the service
@@ -659,7 +653,6 @@ AllowTeleportsToAnyRegion=true
 ;; If ForeignAgentsAllowed is false, make exceptions using DisallowExcept
 ;; Leave blank or commented for no exceptions.
 ; DisallowExcept = "http://myfriendgrid.com:8002, http://myboss.com:8002"
-
 ; DeniedMacs
 ; Must be set in LoginService and GatekeeperService
 ;Fetch your mac string from the login or gatekeeper service(should both be the same anyways), and add inside the GateKeeper and LoginService section. Delimiter is a space for more than one mac
@@ -670,7 +663,7 @@ AllowTeleportsToAnyRegion=true
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs = ""
+DeniedMacs=""
 
 [UserAgentService]
 LocalServiceModule="OpenSim.Services.HypergridService.dll:UserAgentService"
@@ -721,7 +714,7 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 
 ; For the InventoryServiceInConnector
 ;; set by Dreamgrid
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGSuitcaseInventoryService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGInventoryService
 
 ;; alternatives:
 ;;  HG1.5, more permissive, not recommended, but still supported
@@ -826,5 +819,5 @@ enabled=True
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=Gmail for notification
-SMTP_SERVER_PASSWORD=Gmail password
+SMTP_SERVER_LOGIN=fred.beckhusen@gmail.com
+SMTP_SERVER_PASSWORD=4a<$moreG
