Revisions.rtf printable

--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -666,6 +666,7 @@
     <None Include="Resources\PDF..png" />
     <None Include="Resources\PDF.1.png" />
     <None Include="Resources\pdf.png" />
+    <None Include="Resources\printer3.png" />
     <Content Include="Resources\wp_habitat.gif" />
     <Content Include="Resources\wp_Inside_in_shadows.gif" />
     <Content Include="Resources\wp_Mooferd.gif" />
