--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -174,6 +174,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crashdetector.vb" />
     <Compile Include="FormDisplacement2x2.Designer.vb">
       <DependentUpon>FormDisplacement2x2.vb</DependentUpon>
     </Compile>
