--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,20 +25,20 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=www.Outworldz.com
-http_listener_port=9000
+GridName=DreamGrid
+http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://www.Outworldz.com
+BaseURL=http://Mach.Outworldz.net
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.140
+PrivURL=http://192.168.2.135
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=9000
+PublicPort=8002
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
@@ -235,7 +235,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=Robustness;Old Guids=true;Allow Zero Datetime=true;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -597,7 +597,7 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
-welcome=https://www.outworldz.com
+welcome=http://www.outworldz.com/Outworldz_installer/Welcome.htm
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
@@ -714,7 +714,7 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 
 ; For the InventoryServiceInConnector
 ;; set by Dreamgrid
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGInventoryService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGSuitcaseInventoryService
 
 ;; alternatives:
 ;;  HG1.5, more permissive, not recommended, but still supported
@@ -819,5 +819,5 @@ enabled=True
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=fred.beckhusen@gmail.com
-SMTP_SERVER_PASSWORD=4a<$moreG
+SMTP_SERVER_LOGIN=Gmail for notification
+SMTP_SERVER_PASSWORD=Gmail password
