Timer set to 1 hour scan

--- a/OutworldzFiles/Opensim/bin/config-include/FlotsamCache.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/FlotsamCache.ini
@@ -77,8 +77,8 @@
 
     ; How often {in hours} should the disk be checked for expired files
     ; Specify 0 to disable expiration checking
-    FileCleanupTimer = 48  ; disabled
-
+    FileCleanupTimer = 1;
+    
     ; If WAIT_ON_INPROGRESS_REQUESTS has been defined then this specifies how
     ; long (in miliseconds) to block a request thread while trying to complete
     ; an existing write to disk.
