--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="DotNetZip" version="1.11.0" targetFramework="net452" />
   <package id="ini-parser" version="2.5.2" targetFramework="net40" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.2" targetFramework="net46" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.2" targetFramework="net46" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.2" targetFramework="net46" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.2" targetFramework="net46" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
   <package id="MySql.Data" version="6.10.7" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
