--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-RegionServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-RegionServer.ini
@@ -1,6 +1,6 @@
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
-
+; Region Server 
 ;
 ; ### Choose the DB
 ;
