--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -1,6 +1,7 @@
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
+; OSGrid Server
 ;
 ; ### Choose the DB
 ;
