--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
@@ -1,6 +1,6 @@
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
-
+; Standard Grid Server
 ;
 ; ### Choose the DB
 ;
