--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-MetroServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-MetroServer.ini
@@ -1,5 +1,5 @@
 ; This is the main configuration file for an instance of OpenSim running in grid mode
-
+; Metropolis Server
 [DatabaseService]
 ; *************************************************************************
 ; *************************************************************************
