Add OSGrid and Metropolis

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
@@ -1,3 +1,4 @@
+;; ROBUST VERSION
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 ; Standard Grid Server
