--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -1,7 +1,8 @@
+;; ROBUST VERSION
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
-; OSGrid Server
+; Standard Grid Server
 ;
 ; ### Choose the DB
 ;
