--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://192.168.2.135
+BaseURL=http://10.6.1.103
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.135
+PrivURL=http://10.6.1.103
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -43,6 +43,7 @@ PublicPort=8002
 ;; Set by Dreamgrid
 ; The private port of the Robust server
 PrivatePort=8003
+DiagnosticsPort=8001
 
 ; * The startup section lists all the connectors to start up in this server
 ; * instance. This may be only one, or it may be the entire server suite.
@@ -188,6 +189,8 @@ port=${Const|PrivatePort}
 ;; (remember scripts can also be in visiting avatar attachments).
 ;; This can be overriden in individual private service sections if necessary
 AllowllHTTPRequestIn=false
+OutboundDisallowForUserScriptsExcept=10.6.1.103/32
+ExternalHostNameForLSL=hg.osgrid.org
 
 ; * The following are for the remote console
 ; * They have no effect for the local or basic console types
@@ -323,7 +326,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_Welcome="DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_WelcomeTestRegion="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
@@ -816,15 +819,6 @@ Enabled=true
 ;; Realm = UserProfiles
 UserAccountService=OpenSim.Services.UserAccountService.dll:UserAccountService
 AuthenticationServiceModule="OpenSim.Services.AuthenticationService.dll:PasswordAuthenticationService"
-
-[BakedTextureService]
-LocalServiceModule="OpenSim.Server.Handlers.dll:XBakes"
-
-;; This directory must be writable by the user ROBUST runs as. It will be created automatically.
-BaseDirectory="./bakes"
-
-[MuteListService]
-LocalServiceModule="OpenSim.Services.MuteListService.dll:MuteListService"
 
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
