--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-MetroServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-MetroServer.ini
@@ -1,3 +1,4 @@
+;; METRO VERSION
 ; This is the main configuration file for an instance of OpenSim running in grid mode
 ; Metropolis Server
 [DatabaseService]
