--- a/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
@@ -97,13 +97,13 @@
   Allow_osGetWindParam =            true
   Allow_osInviteToGroup =           ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osReplaceString =           true
-  Allow_osSetDynamicTextureData =       ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osSetDynamicTextureDataFace =   ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osSetDynamicTextureDataBlend =  ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osSetDynamicTextureDataBlendFace = ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osSetDynamicTextureURL =        ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osSetDynamicTextureURLBlend =   ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osSetDynamicTextureURLBlendFace = ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
+  Allow_osSetDynamicTextureData =       true
+  Allow_osSetDynamicTextureDataFace =   true
+  Allow_osSetDynamicTextureDataBlend =  true
+  Allow_osSetDynamicTextureDataBlendFace = true
+  Allow_osSetDynamicTextureURL =        true
+  Allow_osSetDynamicTextureURLBlend =   true
+  Allow_osSetDynamicTextureURLBlendFace = true
   Allow_osSetParcelMediaURL =       ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osSetParcelSIPAddress =     ${OSSL|osslParcelOG}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osSetPrimFloatOnWater =     true
