--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-RegionServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-RegionServer.ini
@@ -1,7 +1,7 @@
-;; REGIONSERVER
+; REGION SERVER W/O ROBUST
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
-; Region Server 
+; Standard Grid Server
 ;
 ; ### Choose the DB
 ;
@@ -72,14 +72,14 @@ AssetLoaderArgs="assets/AssetSets.xml"
 ;
 ; Change this to your grid-wide asset server.  Do not add a slash to the end of any of these addresses.
 ;
-AssetServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AssetServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [InventoryService]
 
 ;
 ; Change this to your grid-wide inventory server
 ;
-InventoryServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+InventoryServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 ;MaxRetries = 0
 ;
@@ -96,7 +96,7 @@ GridInfoURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; Change this to your grid-wide grid server
 ;
-GridServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+GridServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 ;AllowHypergridMapSearch = true
 ;; Directory for map tile images of linked regions
@@ -115,7 +115,7 @@ Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ;LocalServiceModule = "OpenSim.Services.Connectors.dll:EstateDataRemoteConnector"
 [EstateService]
-EstateServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+EstateServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [Messaging]
 
@@ -130,49 +130,49 @@ Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; Change this to your grid-wide grid server
 ;
-AvatarServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AvatarServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [AgentPreferencesService]
 
 ;
 ; Change this to your grid-wide avatar prefs server
 ;
-AgentPreferencesServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AgentPreferencesServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [PresenceService]
 
 ;
 ; Change this to your grid-wide presence server
 ;
-PresenceServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+PresenceServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [UserAccountService]
 
 ;
 ; Change this to your grid-wide user accounts server
 ;
-UserAccountServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+UserAccountServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [GridUserService]
 
 ;
 ; Change this to your grid-wide user accounts server
 ;
-GridUserServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+GridUserServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [AuthenticationService]
 
 ;
 ; Change this to your grid-wide authentication server
 ;
-AuthenticationServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+AuthenticationServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [FriendsService]
 
 ;
 ; Change this to your grid-wide friends server
 ;
-FriendsServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+FriendsServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [HGInventoryAccessModule]
 
@@ -226,11 +226,11 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; === HG ONLY ===
 ; Change this to your user agent server (HG robust)
-;;UserAgentServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+;;UserAgentServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 
 [MapImageService]
-MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+MapImageServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [AuthorizationService]
 
@@ -250,7 +250,7 @@ MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ;; Capability assigned by the grid administrator for the simulator
 ;; SimulatorCapability = "00000000-0000-0000-0000-000000000000"
 [MuteListService]
-MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
+MuteListServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 [WebStats]
 enabled=True
