--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -26,19 +26,19 @@
 ;; Set by Dreamgrid
 ; ${Const|GridName}
 GridName=DreamGrid
-http_listener_port=8002
+http_listener_port=9000
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://10.6.1.103
+BaseURL=http://www.outworldz.com
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://10.6.1.103
+PrivURL=http://192.168.2.135
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=8002
+PublicPort=9000
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
@@ -326,7 +326,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_WelcomeTestRegion="DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_RegionTest = "DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
@@ -506,7 +506,7 @@ Currency="G$"
 ClassifiedFee=0
 
 ;;
-WelcomeMessage="Welcome, Avatar!"
+WelcomeMessage=Welcome to DreamGrid
 AllowRemoteSetLoginLevel="false"
 
 ; For V2 map
