Fix grid made attempt

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -1,8 +1,7 @@
-; REGION SERVER W/O ROBUST
-; ; This is the main configuration file for an instance of OpenSim running in grid mode
+;; ROBUST VERSION
+; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
-; Standard Grid Server
 ;
 ; ### Choose the DB
 ;
@@ -41,16 +40,14 @@ ConnectionString="Data Source=127.0.0.1;Database=opensim;Port=3306;User ID=opens
 ;; runs the UserAgentsService.
 ;; For example http://myworld.com:9000 or http://myworld.com:8002
 ;; This is a default that can be overwritten in some sections.
-HomeURI="${Const|BaseURL}:${Const|PublicPort}"
-
+; HomeURI = "${Const|BaseURL}:${Const|PublicPort}"
 ;# {GatekeeperURI} {Hypergrid} {The URL of the gatekeeper of this world} {}
 ;; If this is a standalone world, this is the address of this instance.
 ;; If this is a grided simulator, this is the address of the external robust server
 ;; that runs the Gatekeeper service.
 ;; For example http://myworld.com:9000 or http://myworld.com:8002
 ;; This is a default that can be overwritten in some sections.
-GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
-
+; GatekeeperURI = "${Const|BaseURL}:${Const|PublicPort}"
 [Modules]
 
 ;; Choose one cache module and the corresponding config file, if it exists.
@@ -61,7 +58,6 @@ Include-FlotsamCache="config-include/FlotsamCache.ini"
 
 ;AssetCaching = "CenomeMemoryAssetCache"
 ;Include-CenomeCache = "config-include/CenomeCache.ini"
-;AssetCaching = "GlynnTuckerAssetCache"
 ;; Optionally, the port for the LLProxyLoginModule module can be changed
 ;Setup_LLProxyLoginModule = "9090/"
 ;; Authorization is not on by default, as it depends on external php
@@ -83,7 +79,6 @@ AssetServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 InventoryServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 
 ;MaxRetries = 0
-;
 [GridInfo]
 economymodule=Gloebit
 
@@ -227,7 +222,7 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; === HG ONLY ===
 ; Change this to your user agent server (HG robust)
-;;UserAgentServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+;
 UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 
 [MapImageService]
@@ -252,6 +247,3 @@ MapImageServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;; SimulatorCapability = "00000000-0000-0000-0000-000000000000"
 [MuteListService]
 MuteListServerURI="${Const|BaseURL}:${Const|PrivatePort}"
-
-[WebStats]
-enabled=True
