--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,7 +30,7 @@ http_listener_port=9000
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://www.outworldz.com
+BaseURL=http://192.168.2.135
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
@@ -326,7 +326,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_RegionTest = "DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_vs-blank="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
