--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -1,4 +1,4 @@
-; REGION SERVER W/O ROBUST
+;; ROBUST VERSION
 ; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
@@ -73,14 +73,14 @@ AssetLoaderArgs="assets/AssetSets.xml"
 ;
 ; Change this to your grid-wide asset server.  Do not add a slash to the end of any of these addresses.
 ;
-AssetServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+AssetServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [InventoryService]
 
 ;
 ; Change this to your grid-wide inventory server
 ;
-InventoryServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+InventoryServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 ;MaxRetries = 0
 ;
@@ -97,7 +97,7 @@ GridInfoURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; Change this to your grid-wide grid server
 ;
-GridServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+GridServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 ;AllowHypergridMapSearch = true
 ;; Directory for map tile images of linked regions
@@ -116,7 +116,7 @@ Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ;LocalServiceModule = "OpenSim.Services.Connectors.dll:EstateDataRemoteConnector"
 [EstateService]
-EstateServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+EstateServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [Messaging]
 
@@ -131,49 +131,49 @@ Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; Change this to your grid-wide grid server
 ;
-AvatarServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+AvatarServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [AgentPreferencesService]
 
 ;
 ; Change this to your grid-wide avatar prefs server
 ;
-AgentPreferencesServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+AgentPreferencesServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [PresenceService]
 
 ;
 ; Change this to your grid-wide presence server
 ;
-PresenceServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+PresenceServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [UserAccountService]
 
 ;
 ; Change this to your grid-wide user accounts server
 ;
-UserAccountServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+UserAccountServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [GridUserService]
 
 ;
 ; Change this to your grid-wide user accounts server
 ;
-GridUserServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+GridUserServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [AuthenticationService]
 
 ;
 ; Change this to your grid-wide authentication server
 ;
-AuthenticationServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+AuthenticationServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [FriendsService]
 
 ;
 ; Change this to your grid-wide friends server
 ;
-FriendsServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+FriendsServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [HGInventoryAccessModule]
 
@@ -227,11 +227,11 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ;
 ; === HG ONLY ===
 ; Change this to your user agent server (HG robust)
-;;UserAgentServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+;;UserAgentServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 
 [MapImageService]
-MapImageServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [AuthorizationService]
 
@@ -251,7 +251,7 @@ MapImageServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ;; Capability assigned by the grid administrator for the simulator
 ;; SimulatorCapability = "00000000-0000-0000-0000-000000000000"
 [MuteListService]
-MuteListServerURI="${Const|BaseURL}:${Const|PrivatePort}"
+MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [WebStats]
 enabled=True
