http:// to PrivURL

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -1,7 +1,8 @@
 ;; ROBUST VERSION
-; This is the main configuration file for an instance of OpenSim running in grid mode
+; ; This is the main configuration file for an instance of OpenSim running in grid mode
 [DatabaseService]
 
+; Standard Grid Server
 ;
 ; ### Choose the DB
 ;
@@ -40,14 +41,16 @@ ConnectionString="Data Source=127.0.0.1;Database=opensim;Port=3306;User ID=opens
 ;; runs the UserAgentsService.
 ;; For example http://myworld.com:9000 or http://myworld.com:8002
 ;; This is a default that can be overwritten in some sections.
-; HomeURI = "${Const|BaseURL}:${Const|PublicPort}"
+HomeURI="${Const|BaseURL}:${Const|PublicPort}"
+
 ;# {GatekeeperURI} {Hypergrid} {The URL of the gatekeeper of this world} {}
 ;; If this is a standalone world, this is the address of this instance.
 ;; If this is a grided simulator, this is the address of the external robust server
 ;; that runs the Gatekeeper service.
 ;; For example http://myworld.com:9000 or http://myworld.com:8002
 ;; This is a default that can be overwritten in some sections.
-; GatekeeperURI = "${Const|BaseURL}:${Const|PublicPort}"
+GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
+
 [Modules]
 
 ;; Choose one cache module and the corresponding config file, if it exists.
@@ -58,6 +61,7 @@ Include-FlotsamCache="config-include/FlotsamCache.ini"
 
 ;AssetCaching = "CenomeMemoryAssetCache"
 ;Include-CenomeCache = "config-include/CenomeCache.ini"
+;AssetCaching = "GlynnTuckerAssetCache"
 ;; Optionally, the port for the LLProxyLoginModule module can be changed
 ;Setup_LLProxyLoginModule = "9090/"
 ;; Authorization is not on by default, as it depends on external php
@@ -79,6 +83,7 @@ AssetServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 InventoryServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 ;MaxRetries = 0
+;
 [GridInfo]
 economymodule=Gloebit
 
@@ -223,7 +228,6 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ; === HG ONLY ===
 ; Change this to your user agent server (HG robust)
 ;;UserAgentServerURI="${Const|PrivURL}:${Const|PrivatePort}"
-;
 UserAgentServerURI="${Const|BaseURL}:${Const|PublicPort}"
 
 [MapImageService]
@@ -251,4 +255,3 @@ MuteListServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
 [WebStats]
 enabled=True
-
