--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -26,19 +26,19 @@
 ;; Set by Dreamgrid
 ; ${Const|GridName}
 GridName=DreamGrid
-http_listener_port=9000
+http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://www.outworldz.com
+BaseURL=http://10.6.1.103
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.135
+PrivURL=http://10.6.1.103
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=9000
+PublicPort=8002
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
@@ -190,7 +190,7 @@ port=${Const|PrivatePort}
 ;; This can be overriden in individual private service sections if necessary
 AllowllHTTPRequestIn=false
 OutboundDisallowForUserScriptsExcept=10.6.1.103/32
-ExternalHostNameForLSL=hg.osgrid.org
+ExternalHostNameForLSL="${Const|BaseURL}:${Const|PublicPort}"
 
 ; * The following are for the remote console
 ; * They have no effect for the local or basic console types
@@ -326,7 +326,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_RegionTest = "DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_Test_Welcome="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
