--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -326,7 +326,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_Test_Welcome="DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_AlphaCentauriTrek="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
