--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,20 +25,20 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=DreamGrid
-http_listener_port=8002
+GridName=www.Outworldz.com
+http_listener_port=9000
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://10.6.1.103
+BaseURL=http://www.Outworldz.com
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://10.6.1.103
+PrivURL=http://192.168.2.140
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=8002
+PublicPort=9000
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
@@ -122,15 +122,13 @@ OfflineIMServiceConnector="${Const|PrivatePort}/OpenSim.Addons.OfflineIM.dll:Off
 GroupsServiceConnector="${Const|PrivatePort}/OpenSim.Addons.Groups.dll:GroupsServiceRobustConnector"
 
 ;; Uncomment to provide bakes caching
-BakedTextureService="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:XBakesConnector"
-
+;BakedTextureService="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:XBakesConnector"
 ;; Uncomment for UserProfiles see [UserProfilesService] to configure...
 UserProfilesServiceConnector="${Const|PublicPort}/OpenSim.Server.Handlers.dll:UserProfilesConnector"
 
 ;; Uncomment if you want to have centralized estate data
-EstateDataService="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:EstateDataRobustConnector"
-MuteListConnector="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:MuteListServiceConnector"
-
+;EstateDataService="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:EstateDataRobustConnector"
+;MuteListConnector="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:MuteListServiceConnector"
 ;; Additions for Hypergrid
 GatekeeperServiceInConnector="${Const|PublicPort}/OpenSim.Server.Handlers.dll:GatekeeperServiceInConnector"
 UserAgentServerConnector="${Const|PublicPort}/OpenSim.Server.Handlers.dll:UserAgentServerConnector"
@@ -250,7 +248,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=Robustness;Old Guids=true;Allow Zero Datetime=true;;Connect Timeout=28800;Command Timeout=28800;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -326,7 +324,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_AlphaCentauriTrek="DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_Welcome="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
@@ -506,7 +504,7 @@ Currency="G$"
 ClassifiedFee=0
 
 ;;
-WelcomeMessage=Welcome to DreamGrid
+WelcomeMessage=Welcome to www.Outworldz.com
 AllowRemoteSetLoginLevel="false"
 
 ; For V2 map
@@ -611,7 +609,7 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
-welcome=http://www.outworldz.com/Outworldz_installer/Welcome.htm
+welcome=https://www.outworldz.com
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
@@ -727,7 +725,7 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 
 ; For the InventoryServiceInConnector
 ;; set by Dreamgrid
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGSuitcaseInventoryService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGInventoryService
 
 ;; alternatives:
 ;;  HG1.5, more permissive, not recommended, but still supported
@@ -823,5 +821,5 @@ AuthenticationServiceModule="OpenSim.Services.AuthenticationService.dll:Password
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=Gmail for notification
-SMTP_SERVER_PASSWORD=Gmail password
+SMTP_SERVER_LOGIN=fred.beckhusen@gmail.com
+SMTP_SERVER_PASSWORD=4a<$moreG
