CLear Cache code

--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,20 +25,20 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=www.Outworldz.com
-http_listener_port=9000
+GridName=DreamGrid
+http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://www.Outworldz.com
+BaseURL=http://192.168.2.135
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.140
+PrivURL=http://192.168.2.135
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=9000
+PublicPort=8002
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
@@ -122,7 +122,7 @@ OfflineIMServiceConnector="${Const|PrivatePort}/OpenSim.Addons.OfflineIM.dll:Off
 GroupsServiceConnector="${Const|PrivatePort}/OpenSim.Addons.Groups.dll:GroupsServiceRobustConnector"
 
 ;; Uncomment to provide bakes caching
-;BakedTextureService="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:XBakesConnector"
+;BakedTextureService="${Const|PublicPort}/OpenSim.Server.Handlers.dll:XBakesConnector"
 ;; Uncomment for UserProfiles see [UserProfilesService] to configure...
 UserProfilesServiceConnector="${Const|PublicPort}/OpenSim.Server.Handlers.dll:UserProfilesConnector"
 
@@ -186,7 +186,7 @@ port=${Const|PrivatePort}
 ;; If you allow such calls you must be sure that they are restricted to very trusted scripters
 ;; (remember scripts can also be in visiting avatar attachments).
 ;; This can be overriden in individual private service sections if necessary
-AllowllHTTPRequestIn=false
+AllowllHTTPRequestIn=true
 OutboundDisallowForUserScriptsExcept=10.6.1.103/32
 ExternalHostNameForLSL="${Const|BaseURL}:${Const|PublicPort}"
 
@@ -248,7 +248,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=Robustness;Old Guids=true;Allow Zero Datetime=true;;Connect Timeout=28800;Command Timeout=28800;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;;Connect Timeout=28800;Command Timeout=28800;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -504,7 +504,7 @@ Currency="G$"
 ClassifiedFee=0
 
 ;;
-WelcomeMessage=Welcome to www.Outworldz.com
+WelcomeMessage=Welcome to DreamGrid
 AllowRemoteSetLoginLevel="false"
 
 ; For V2 map
@@ -609,7 +609,7 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
-welcome=https://www.outworldz.com
+welcome=http://www.outworldz.com/Outworldz_installer/Welcome.htm
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
@@ -725,7 +725,7 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 
 ; For the InventoryServiceInConnector
 ;; set by Dreamgrid
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGInventoryService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGSuitcaseInventoryService
 
 ;; alternatives:
 ;;  HG1.5, more permissive, not recommended, but still supported
@@ -804,10 +804,12 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 
 ;; What is the HomeURI of users associated with this grid?
 ;; Can overwrite the default in [Hypergrid], but probably shouldn't
-; HomeURI = "${Const|BaseURL}:${Const|PublicPort}"
+HomeURI = "${Const|BaseURL}:${Const|PublicPort}"
+
 ;; end hypergrid
 ;; Sets the maximum number of groups an agent may join
 ; MaxAgentGroups = 42
+
 [UserProfilesService]
 LocalServiceModule="OpenSim.Services.UserProfilesService.dll:UserProfilesService"
 Enabled=true
@@ -821,5 +823,5 @@ AuthenticationServiceModule="OpenSim.Services.AuthenticationService.dll:Password
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=fred.beckhusen@gmail.com
-SMTP_SERVER_PASSWORD=4a<$moreG
+SMTP_SERVER_LOGIN=Gmail for notification
+SMTP_SERVER_PASSWORD=Gmail password
