Explict set of SupportViewerObjectsCache

--- a/OutworldzFiles/Opensim/bin/OpenSimDefaults.ini
+++ b/OutworldzFiles/Opensim/bin/OpenSimDefaults.ini
@@ -175,7 +175,7 @@
     ; This is meant to be used on systems where some external system like
     ; Monit will restart any instance that exits, thereby making the shutdown
     ; into a restart.
-    InworldRestartShutsDown = false
+    InworldRestartShutsDown = true
 
     ; Use of normalized 55FPS statistics
 	; Opensim does not have a frame rate control like other simulators.
@@ -754,11 +754,12 @@
     ;
     ;PausedAckTimeout = 300
 
-	; Support viewers object cache, default true
-	; users may need to reduce viewer bandwitdh if some prims or terrain parts fail to rez.
-	; change to false if you need to use old viewers that do not support this feature
-	;
-	; SupportViewerObjectsCache = true
+    ; Support viewers object cache, default true
+    ; users may need to reduce viewer bandwitdh if some prims or terrain parts fail to rez.
+    ; change to false if you need to use old viewers that do not support this feature
+    ;
+
+    SupportViewerObjectsCache = true
 
 [ClientStack.LindenCaps]
     ;; Long list of capabilities taken from
