--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -216,6 +216,12 @@
     <Compile Include="FormFlotsamCache.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormFsAssets.Designer.vb">
+      <DependentUpon>FormFsAssets.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormFsAssets.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormIARSave.Designer.vb">
       <DependentUpon>FormIARSave.vb</DependentUpon>
     </Compile>
@@ -417,6 +423,9 @@
     <EmbeddedResource Include="FormFlotsamCache.resx">
       <DependentUpon>FormFlotsamCache.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormFsAssets.resx">
+      <DependentUpon>FormFsAssets.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormIARSave.resx">
       <DependentUpon>FormIARSave.vb</DependentUpon>
     </EmbeddedResource>
@@ -428,6 +437,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormBird.resx">
       <DependentUpon>FormBird.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCaches.resx">
       <DependentUpon>FormCaches.vb</DependentUpon>
