--- a/Installer_Src/Setup DreamWorld/app.config
+++ b/Installer_Src/Setup DreamWorld/app.config
@@ -93,7 +93,7 @@
       <setting name="AccountConfirmationRequired" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="SmtpUsername" serializeAs="String">
+      <setting name="SmtPropUserName" serializeAs="String">
         <value>Gmail for notification</value>
       </setting>
       <setting name="SmtpPassword" serializeAs="String">
