--- a/OutworldzFiles/Apache/conf/extra/httpd-ssl.conf
+++ b/OutworldzFiles/Apache/conf/extra/httpd-ssl.conf
@@ -37,7 +37,7 @@
 #       Listen directives: "Listen [::]:443" and "Listen 0.0.0.0:443"
 #
 # changed by Dreamgrid
-Listen 192.168.2.135:443
+Listen 10.6.1.103:443
 
 ##
 ##  SSL Global Context
@@ -76,7 +76,7 @@ SSLCipherSuite HIGH:MEDIUM:!aNULL:!MD5
 
 #SSLSessionCache         "dbm:c:/Apache24/logs/ssl_scache"
 # changed by Dreamgrid
-SSLSessionCache shmcb:"O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/ssl_scache(512000)"
+SSLSessionCache shmcb:"O:/Opensim/Outworldz Dreamgrid 3/Outworldzfiles/Apache/logs/ssl_scache(512000)"
 
 
 ##
@@ -87,9 +87,9 @@ SSLSessionCache shmcb:"O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs
 
 #   General setup for the virtual host
 # changed by Dreamgrid
-DocumentRoot "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
+DocumentRoot "O:/Opensim/Outworldz Dreamgrid 3/Outworldzfiles/Apache/htdocs"
 # changed by Dreamgrid
-ServerName 192.168.2.135
+ServerName 10.6.1.103
 
 ServerAdmin not@set.yet
 
