--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -699,6 +699,8 @@
     <None Include="Resources\pdf.png" />
     <None Include="Resources\printer3.png" />
     <None Include="Resources\ClicktoInsertPhoto.jpg" />
+    <None Include="Resources\nav_plain_green.png" />
+    <None Include="Resources\nav_plain_red.png" />
     <Content Include="Resources\wp_habitat.gif" />
     <Content Include="Resources\wp_Inside_in_shadows.gif" />
     <Content Include="Resources\wp_Mooferd.gif" />
